# Team4-DataStructure

./: README.md
l-PARCIAL/Deber15_ListasDobles/ProyectoDobleLista/: CMakeLists.txt  Nodo.cpp  lista_doble_enlazada.cpp  main.cpp
l-PARCIAL/Deber15_ListasDobles/ProyectoDobleLista/.cache/clangd/index/: Nodo.cpp.3D74A695275C8343.idx  Nodo.cpp.649F0A7ADD34EB82.idx  Nodo.h.13BC81A09D761FC7.idx  Nodo.h.1527779119197343.idx  lista_doble_enlazada.cpp.0C7B55C4B60F4799.idx  lista_doble_enlazada.cpp.B0DED3944361191D.idx  lista_doble_enlazada.h.48690E569D1301B1.idx  lista_doble_enlazada.h.7A846CD9E312E3B1.idx  main.cpp.045FF6C99C3EF4FB.idx  main.cpp.9FF63BB214939606.idx
l-PARCIAL/Deber3/: Data.cpp  Data.h  Makefile.win  Operations.cpp  Operations.h  ProyectoArreglosRandom.dev  main.cpp  (+1 more)
l-PARCIAL/Proyecto Primer Parcial/Proyecto-Final/: CMakeLists.txt  Fecha.cpp  Fecha.h  Lista.cpp  Lista.h  ListadoPersonas.cpp  ListadoPersonas.h  Menu.cpp  Menu.h  Nodo.cpp  Nodo.h  OperacionesCredito.cpp  OperacionesCredito.h  OperacionesFecha.cpp  OperacionesFecha.h  OperacionesPersona.cpp  OperacionesPersona.h  Persona.cpp  Persona.h  Prestamo.cpp  Prestamo.h  Validar.cpp  Validar.h  main.cpp
l-PARCIAL/Proyecto Primer Parcial/Proyecto-Final/.cache/clangd/index/: Fecha.cpp.BD773D9538B1617B.idx  Fecha.h.BA74025F9E8A2460.idx  OperacionesFecha.cpp.CF4D57DD23F2FEE0.idx  OperacionesFecha.h.56215CC98ABECA7E.idx  Persona.cpp.725A78953AC5B9B5.idx  Persona.h.1382A7378A6990D3.idx  ValidarDatos.cpp.56982D258F14205C.idx  ValidarDatos.h.C3E083DD48572904.idx  main.cpp.58251713A0888F7C.idx
(+717 files in other folders)
